Change log next version
-----------------------
* Added missing class, PowerMocompizckTestCase, to testng full release jar (issue 327).
* Fixed test initialization error when using PowerMock Mockito API in Ant (issue 333).
* Upgraded to Javassist 3.15 GA (issue 338).
* Upgraded TestNG module to TestNG 6.1.1.

Change log 1.4.9 (2011-05-02)
-----------------------------
* Fixed an issue when mocking system classes containing fields of type Class, Classloader or synthetic fields such as java.util.ServiceLoader.
* TestNG PowerMockObjectFactory now sets the thread context classloader to the PowerMock mock classloader (issue 315).
* TestNG PowerMockObjectFactory now only uses PowerMock classloader and byte-code manipulation if the test class or a method declared in this method is annotated with @PrepareForTest or @SuppressStaticInitializerFor. This introduce a non-backward compatible change that you're currently using mock injection (e.g. annotating a field with @Mock) you must now also use @PrepareForTest or @SuppressStaticInitializerFor for the mocks to be injected (issue 299).
* Upgraded TestNG module to TestNG 6.0.1 (issue 316).
* Fixed an issue with the PowerMock JUnit runner that prevented a JUnit Rule to throw an exception failing the test (issue 311).
* Fixed an issue with test state clearing while running a PowerMock enabled test as an Eclipse PDE test (issue 309).
* Classloader based PowerMock JUnit Rules now supports suppressing static initializers
* Improved state clean-up in TestNG module when extending from PowerMockTestCase.
* Automatic creation and injection of mocks to a field annotated with @Mock does no longer work if you're not extending from PowerMockTestCase in the TestNG classloading module (side-effect of issue 299).